syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "com.tokohobby.blogs.grpc.auth";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string username = 3;
  string role = 4;
  string error_message = 5;
}
